--- a/ServicesManager/ServicesManager.csproj
+++ b/ServicesManager/ServicesManager.csproj
@@ -2,6 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ModelsProject\ModelsProject.csproj" />
+    </ItemGroup>
 
 </Project>
