--- a/ModelsProject/ModelsProject.csproj
+++ b/ModelsProject/ModelsProject.csproj
@@ -5,4 +5,8 @@
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Driver" Version="2.10.1" />
+    </ItemGroup>
+
 </Project>
