--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "StudentDatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "StudentDb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
