--- a/ServicesManager/ServicesManager.csproj
+++ b/ServicesManager/ServicesManager.csproj
@@ -9,4 +9,8 @@
       <ProjectReference Include="..\ModelsProject\ModelsProject.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MongoDB.Driver" Version="2.10.1" />
+    </ItemGroup>
+
 </Project>
