--- a/StudentManagementApi.csproj
+++ b/StudentManagementApi.csproj
@@ -17,10 +17,15 @@
       <_ContentIncludedByDefault Remove="ServicesManager\obj\project.packagespec.json" />
       <_ContentIncludedByDefault Remove="ServicesManager\obj\ServicesManager.csproj.nuget.dgspec.json" />
       <_ContentIncludedByDefault Remove="ModelsProject\bin\Debug\netcoreapp3.1\ModelsProject.deps.json" />
+      <_ContentIncludedByDefault Remove="StudentManagementApi.UnitTests\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="StudentManagementApi.UnitTests\obj\project.packagespec.json" />
+      <_ContentIncludedByDefault Remove="StudentManagementApi.UnitTests\obj\StudentManagementApi.UnitTests.csproj.nuget.dgspec.json" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="MongoDB.Driver" Version="2.10.1" />
+      <PackageReference Include="xunit.assert" Version="2.4.0" />
+      <PackageReference Include="xunit.extensibility.core" Version="2.4.1" />
     </ItemGroup>
 
 
